...
                                .padding(.vertical, 5)
                                .padding(.horizontal, 8)
                                .foregroundColor(Color.white)
                                .overlay(RoundedRectangle(cornerRadius: Constants.radius.small)
                                    .stroke(Color.white, lineWidth: 1)
                                )
                                .accessibilityIdentifier("menu")
                        }
                    }
                }
                .padding(.horizontal)
            }
            
...
