...
                        .swipeActions(edge: .trailing, allowsFullSwipe: true) {
                            Button(role: .destructive) {
                                delete(visitor)
                            } label: {
                                Image(systemName: "trash")
                            }
                            .accessibility(identifier: "delete-visitor")
                        }
                    }
                }
            } else {
                ProgressView()
                    .centered()
...
