...

  Created by Nils Brenkman on 24/08/2021.
  
*/

"common.ok" = "OK";
"common.add" = "Add";
"common.back" = "Back";
"common.save" = "Save";
"common.delete" = "Delete";
"common.cancel" = "Cancel";
"common.select" = "Select";
"common.stop" = "Stop";
...
